--- a/about.html
+++ b/about.html
@@ -1,140 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--Head section contains metadata (not displayed in page)-->
+  <!--Head section contains metadata (not displayed in page)-->
 
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!--Title displayed in browser tab-->
-  <title>About</title>
-  <!-- social icon stylesheet -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <!-- stylesheet -->
-  <link rel="stylesheet" href="style/main.css" />
-</head>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--Title displayed in browser tab-->
+    <title>About</title>
+    <!-- social icon stylesheet -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="style/main.css" />
+  </head>
 
-<nav class="fill">
-  <h1>URBAN FARMING</h1>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="getinvolved.html">Get Involved</a></li>
-    <li><a href="resources.html">Resources</a></li>
-    <li><a href="gallery.html">Gallery</a></li>
-  </ul>
-</nav>
+  <nav class="fill">
+    <h1>Growlando</h1>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="getinvolved.html">Get Involved</a></li>
+      <li><a href="resources.html">Resources</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+    </ul>
+  </nav>
 
-<body>
-  <section>
-    <div class="container">
-      <div class="left"></div>
-      <div class="right">
-        <div class="content">
-          <h1>What is Urban Farming?</h1>
+  <body>
+    <section>
+      <div class="container">
+        <div class="left"></div>
+        <div class="right">
+          <div class="content">
+            <h1>What is Urban Farming?</h1>
+            <p>
+              Growlando is an Orlando, FL based company that strives to make
+              efficient use of our beautiful city space in order to feed the
+              very people who inhabit it. Urban farming consists of cultivating,
+              processing, and distributing food in or around the city’s urban
+              areas. This leads to sustainable methods that contribute to
+              Orlando’s healthy food supply, cutting carbon emissions, and local
+              economy. With the help of amazing staff, community volunteers, and
+              green spaces all around, we have cultivated Orlando’s first city
+              wide urban farming program.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="mission-section-grid">
+      <div class="row1 noMargin">
+        <div class="mission-section">
+          <h1>Mission Statement</h1>
           <p>
-            Growlando is an Orlando, FL based company that strives to make 
-            efficient use of our beautiful city space in order to feed the
-            very people who inhabit it. Urban farming consists of cultivating,
-            processing, and distributing food in or around the city’s urban
-            areas. This leads to sustainable methods that contribute to
-            Orlando’s healthy food supply, cutting carbon emissions, and 
-            local economy. With the help of amazing staff, community volunteers, 
-            and green spaces all around, we have cultivated Orlando’s first city 
-            wide urban farming program.
-
-          
+            Our mission is to supply Orlando with an abundance of food for the
+            community and those in need while encouraging the establishment of
+            unused land, getting locals active and outside, and finally creating
+            an economically sustainable program for our city.
           </p>
         </div>
-      </div>
-    </div>
-  </section>
-  <div class="mission-section-grid">
-  <div class="row1 noMargin">
-    <div class="mission-section">
-      <h1>Mission Statement</h1>
-      <p>
-        Our mission is to supply Orlando with an abundance of food for
-        the community and those in need while encouraging the establishment
-        of unused land, getting locals active and outside, and finally 
-        creating an economically sustainable program for our city. 
-
-      </p>
-    </div>
-	<!--EDIT IMAGE SIZES-->
-    <div class="mission-section-image">
-	<img src="img/img24.jpg" width="100%" alt="close-up of pink flowers">
-	</div>
-	</div>
-  </div>
-  <div class="row1 noMargin">
-    <div class="goal-section-image">
-	<img src="img/img25.jpg" width="100%" alt="blue sky and sun over field of yellow flowers">
-	</div>
-    <div class="goal-section">
-      <h1>Goals</h1>
-      <p>
-        The introduction of our urban farming program can help reduce negative
-        environmental impacts by promoting sustainable agriculture as well as 
-        increase the sense of interconnection within communities. We strive to 
-        provide long-term food security as well as improve economic, social, and 
-        environmental problems.
-      </p>
-    </div>
-  </div>
-  <footer>
-    <div class="footer-grid">
-
-      <!--SECTION 1-->
-      <div class="footer-grid-item item1">
-        <h4>Growlando Urban Farming</h4>
-        <p>We are a non-profit agriculture program that works
-          to provide sustainable and localized food systems in the Greater Orlando area.
-          Let's grow together.</p>
-      </div>
-
-      <!--SECTION 2-->
-      <div class="footer-grid-item item2">
-        <h4>Menu</h4>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="getinvolved.html">Get Involved</a></li>
-          <li><a href="resources.html">Resources</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
-        </ul>
-      </div>
-
-      <!--SECTION 3-->
-      <div class="footer-grid-item item3">
-        <h4>Useful Links</h4>
-        <ul>
-          <li><a href="#">Privacy Policy</a></li>
-          <li><a href="#">Terms of Use</a></li>
-        </ul>
-      </div>
-
-      <!--SECTION 4-->
-      <div class="footer-grid-item item4">
-        <p>Copyright &copy Growlando Urban Farming 2021</p>
-
-        <div class=" footer-social">
-          <ul>
-            <li>
-              <a href="#"><i class="fa fa-facebook"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa fa-instagram"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa fa-youtube"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa fa-twitter"></i></a>
-            </li>
-          </ul>
+        <!--EDIT IMAGE SIZES-->
+        <div class="mission-section-image">
+          <img
+            src="img/img24.jpg"
+            width="100%"
+            alt="close-up of pink flowers"
+          />
         </div>
       </div>
     </div>
-  </footer>
-</body>
+    <div class="row1 noMargin">
+      <div class="goal-section-image">
+        <img
+          src="img/img25.jpg"
+          width="100%"
+          alt="blue sky and sun over field of yellow flowers"
+        />
+      </div>
+      <div class="goal-section">
+        <h1>Goals</h1>
+        <p>
+          The introduction of our urban farming program can help reduce negative
+          environmental impacts by promoting sustainable agriculture as well as
+          increase the sense of interconnection within communities. We strive to
+          provide long-term food security as well as improve economic, social,
+          and environmental problems.
+        </p>
+      </div>
+    </div>
+    <footer>
+      <div class="footer-grid">
+        <!--SECTION 1-->
+        <div class="footer-grid-item item1">
+          <h4>Growlando Urban Farming</h4>
+          <p>
+            We are a non-profit agriculture program that works to provide
+            sustainable and localized food systems in the Greater Orlando area.
+            Let's grow together.
+          </p>
+        </div>
 
+        <!--SECTION 2-->
+        <div class="footer-grid-item item2">
+          <h4>Menu</h4>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="getinvolved.html">Get Involved</a></li>
+            <li><a href="resources.html">Resources</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+          </ul>
+        </div>
+
+        <!--SECTION 3-->
+        <div class="footer-grid-item item3">
+          <h4>Useful Links</h4>
+          <ul>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms of Use</a></li>
+          </ul>
+        </div>
+
+        <!--SECTION 4-->
+        <div class="footer-grid-item item4">
+          <p>Copyright &copy Growlando Urban Farming 2021</p>
+
+          <div class="footer-social">
+            <ul>
+              <li>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-instagram"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-youtube"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
