--- a/gallery.html
+++ b/gallery.html
@@ -1,223 +1,271 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--Head section contains metadata (not displayed in page)-->
+  <!--Head section contains metadata (not displayed in page)-->
 
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!--Title displayed in browser tab-->
-  <title>Gallery</title>
-  <!-- social icon stylesheet -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <!-- stylesheet -->
-  <link rel="stylesheet" href="style/main.css" />
-  <!-- gallery slideshow javascript-->
-  <script>
-    var slideIndex = 1;
-    showSlides(slideIndex);
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--Title displayed in browser tab-->
+    <title>Gallery</title>
+    <!-- social icon stylesheet -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="style/main.css" />
+    <!-- gallery slideshow javascript-->
+    <script>
+      var slideIndex = 1;
+      showSlides(slideIndex);
 
-    function plusSlides(n) {
-      showSlides((slideIndex += n));
-    }
-
-    function currentSlide(n) {
-      showSlides((slideIndex = n));
-    }
-
-    function showSlides(n) {
-      var i;
-      var slides = document.getElementsByClassName("mySlides");
-      var dots = document.getElementsByClassName("dot");
-      if (n > slides.length) {
-        slideIndex = 1;
+      function plusSlides(n) {
+        showSlides((slideIndex += n));
       }
-      if (n < 1) {
-        slideIndex = slides.length;
-      }
-      for (i = 0; i < slides.length; i++) {
-        slides[i].style.display = "none";
-      }
-      for (i = 0; i < dots.length; i++) {
-        dots[i].className = dots[i].className.replace(" active", "");
-      }
-      slides[slideIndex - 1].style.display = "block";
-      dots[slideIndex - 1].className += " active";
-    }
-  </script>
-</head>
 
-<nav class="fill">
-  <h1>URBAN FARMING</h1>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="getinvolved.html">Get Involved</a></li>
-    <li><a href="resources.html">Resources</a></li>
-    <li><a href="gallery.html">Gallery</a></li>
-  </ul>
-</nav>
+      function currentSlide(n) {
+        showSlides((slideIndex = n));
+      }
 
-<body>
+      function showSlides(n) {
+        var i;
+        var slides = document.getElementsByClassName("mySlides");
+        var dots = document.getElementsByClassName("dot");
+        if (n > slides.length) {
+          slideIndex = 1;
+        }
+        if (n < 1) {
+          slideIndex = slides.length;
+        }
+        for (i = 0; i < slides.length; i++) {
+          slides[i].style.display = "none";
+        }
+        for (i = 0; i < dots.length; i++) {
+          dots[i].className = dots[i].className.replace(" active", "");
+        }
+        slides[slideIndex - 1].style.display = "block";
+        dots[slideIndex - 1].className += " active";
+      }
+    </script>
+  </head>
 
-  <div class="gray-section">
-    <div class="featuredImg">
-  <h1>Featured Post</h1><br/>
-  <p>Featured Post info<br/><br/>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  Eu non diam phasellus vestibulum lorem sed risus ultricies.
-  Felis eget velit aliquet sagittis id consectetur purus ut.
-  Volutpat commodo sed egestas egestas fringilla phasellus.
-  Nulla aliquet enim tortor at auctor urna nunc. Suspendisse interdum
-  consectetur libero id faucibus nisl tincidunt eget. Mauris in
-  aliquam sem fringilla ut morbi. Ut sem nulla pharetra diam sit amet nisl.
- </p>
-  <div class="slideshow-container">
-  
-  
-      <div class="mySlides fade">
-        <div class="number-text">1 / 3</div>
-        <img src="./img/gallery-img1.jpg" style="width: 100%" />
+  <nav class="fill">
+    <h1>Growlando</h1>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="getinvolved.html">Get Involved</a></li>
+      <li><a href="resources.html">Resources</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+    </ul>
+  </nav>
+
+  <body>
+    <div class="gray-section">
+      <div class="featuredImg">
+        <h1>Featured Post</h1>
+        <br />
+        <p>
+          Featured Post info<br /><br />
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu non
+          diam phasellus vestibulum lorem sed risus ultricies. Felis eget velit
+          aliquet sagittis id consectetur purus ut. Volutpat commodo sed egestas
+          egestas fringilla phasellus. Nulla aliquet enim tortor at auctor urna
+          nunc. Suspendisse interdum consectetur libero id faucibus nisl
+          tincidunt eget. Mauris in aliquam sem fringilla ut morbi. Ut sem nulla
+          pharetra diam sit amet nisl.
+        </p>
+        <div class="slideshow-container">
+          <div class="mySlides fade">
+            <div class="number-text">1 / 3</div>
+            <img src="./img/gallery-img1.jpg" style="width: 100%" />
+          </div>
+
+          <div class="mySlides fade">
+            <div class="number-text">2 / 3</div>
+            <img src="./img/gallery-img2.jpg" style="width: 100%" />
+          </div>
+
+          <div class="mySlides fade">
+            <div class="number-text">3 / 3</div>
+            <img src="./img/gallery-img3.jpg" style="width: 100%" />
+          </div>
+
+          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <br />
+
+        <div style="text-align: center">
+          <span class="dot" onclick="currentSlide(1)"></span>
+          <span class="dot" onclick="currentSlide(2)"></span>
+          <span class="dot" onclick="currentSlide(3)"></span>
+        </div>
+
+        <script>
+          showSlides(slideIndex);
+        </script>
       </div>
-
-      <div class="mySlides fade">
-        <div class="number-text">2 / 3</div>
-        <img src="./img/gallery-img2.jpg" style="width: 100%" />
+      <!--CREATE MODAL FOR IMAGES-->
+      <h2 style="text-align: center">Gallery</h2>
+      <div class="img-grid gallery">
+        <a target="_blank" href="img/img7.jpg">
+          <img
+            src="img/img7.jpg"
+            width="100%"
+            alt="pathway between rows of fruit"
+          />
+        </a>
+        <a target="_blank" href="img/img8.jpg">
+          <img
+            src="img/img8.jpg"
+            width="100%"
+            alt="close-up of person planting"
+          />
+        </a>
+        <a target="_blank" href="img/img9.jpg">
+          <img src="img/img9.jpg" width="100%" alt="person planting seeds" />
+        </a>
+        <a target="_blank" href="img/img12.jpg">
+          <img src="img/img12.jpg" width="100%" alt="girl watering plants" />
+        </a>
+        <a target="_blank" href="img/img11.jpg">
+          <img
+            src="img/img11.jpg"
+            width="100%"
+            alt="two people picking fruit in field"
+          />
+        </a>
+        <a target="_blank" href="img/img13.jpg">
+          <img src="img/img13.jpg" width="100%" alt="watering plants" />
+        </a>
+        <a target="_blank" href="img/img14.jpg">
+          <img
+            src="img/img14.jpg"
+            width="100%"
+            alt="close-up of small potted plants"
+          />
+        </a>
+        <a target="_blank" href="img/img15.jpg">
+          <img
+            src="img/img15.jpg"
+            width="100%"
+            alt="man in uniform gardening"
+          />
+        </a>
+        <a target="_blank" href="img/img16.jpg">
+          <img
+            src="img/img16.jpg"
+            width="100%"
+            alt="aerial view of gardening tools"
+          />
+        </a>
+        <a target="_blank" href="img/img17.jpg">
+          <img
+            src="img/img17.jpg"
+            width="100%"
+            alt="greenhouse with rows of plants"
+          />
+        </a>
+        <a target="_blank" href="img/img18.jpg">
+          <img
+            src="img/img18.jpg"
+            width="100%"
+            alt="aerial view of an example of urban farming"
+          />
+        </a>
+        <a target="_blank" href="img/img19.jpg">
+          <img
+            src="img/img19.jpg"
+            width="100%"
+            alt="many people placing plants in soil"
+          />
+        </a>
+        <a target="_blank" href="img/img20.jpg">
+          <img src="img/img20.jpg" width="100%" alt="potting plants" />
+        </a>
+        <a target="_blank" href="img/img21.jpg">
+          <img
+            src="img/img21.jpg"
+            width="100%"
+            alt="sunset over purple flowers"
+          />
+        </a>
+        <a target="_blank" href="img/img22.jpg">
+          <img
+            src="img/img22.jpg"
+            width="100%"
+            alt="sign that reads 'we are in the garden'"
+          />
+        </a>
+        <a target="_blank" href="img/img23.jpg">
+          <img
+            src="img/img23.jpg"
+            width="100%"
+            alt="hands holding three zucchini"
+          />
+        </a>
       </div>
-
-      <div class="mySlides fade">
-        <div class="number-text">3 / 3</div>
-        <img src="./img/gallery-img3.jpg" style="width: 100%" />
-      </div>
-
-      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-      <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
-    <br />
+    <script>
+      showSlides(slideIndex);
+    </script>
 
-    <div style="text-align: center">
-      <span class="dot" onclick="currentSlide(1)"></span>
-      <span class="dot" onclick="currentSlide(2)"></span>
-      <span class="dot" onclick="currentSlide(3)"></span>
-    </div>
+    <footer>
+      <div class="footer-grid">
+        <!--SECTION 1-->
+        <div class="footer-grid-item item1">
+          <h4>About</h4>
+          <p>
+            We are a non-profit agriculture program that works to provide
+            sustainable and localized food systems in the Greater Orlando area.
+            Let's grow together.
+          </p>
+        </div>
 
-  <script>
-    showSlides(slideIndex);
-  </script>
-  </div>
-  <!--CREATE MODAL FOR IMAGES-->
-  	<h2 style="text-align: center">Gallery</h2>
-	<div class="img-grid gallery">
-	<a target="_blank" href="img/img7.jpg">
-	<img src="img/img7.jpg" width="100%" alt="pathway between rows of fruit">
-	</a>
-	<a target="_blank" href="img/img8.jpg">
-	<img src="img/img8.jpg" width="100%" alt="close-up of person planting">
-	</a>
-	<a target="_blank" href="img/img9.jpg">
-	<img src="img/img9.jpg" width="100%" alt="person planting seeds">
-	</a>
-	<a target="_blank" href="img/img12.jpg">
-	<img src="img/img12.jpg" width="100%" alt="girl watering plants">
-	</a>
-	<a target="_blank" href="img/img11.jpg">
-	<img src="img/img11.jpg" width="100%" alt="two people picking fruit in field">
-	</a>
-	<a target="_blank" href="img/img13.jpg">
-	<img src="img/img13.jpg" width="100%" alt="watering plants">
-	</a>
-	<a target="_blank" href="img/img14.jpg">
-	<img src="img/img14.jpg" width="100%" alt="close-up of small potted plants">
-	</a>
-	<a target="_blank" href="img/img15.jpg">
-	<img src="img/img15.jpg" width="100%" alt="man in uniform gardening">
-	</a>
-	<a target="_blank" href="img/img16.jpg">
-	<img src="img/img16.jpg" width="100%" alt="aerial view of gardening tools">
-	</a>
-	<a target="_blank" href="img/img17.jpg">
-	<img src="img/img17.jpg" width="100%" alt="greenhouse with rows of plants">
-	</a>
-	<a target="_blank" href="img/img18.jpg">
-	<img src="img/img18.jpg" width="100%" alt="aerial view of an example of urban farming">
-	</a>
-	<a target="_blank" href="img/img19.jpg">
-	<img src="img/img19.jpg" width="100%" alt="many people placing plants in soil">
-	</a>
-	<a target="_blank" href="img/img20.jpg">
-	<img src="img/img20.jpg" width="100%" alt="potting plants">
-	</a>
-	<a target="_blank" href="img/img21.jpg">
-	<img src="img/img21.jpg" width="100%" alt="sunset over purple flowers">
-	</a>
-	<a target="_blank" href="img/img22.jpg">
-	<img src="img/img22.jpg" width="100%" alt="sign that reads 'we are in the garden'">
-	</a>
-	<a target="_blank" href="img/img23.jpg">
-	<img src="img/img23.jpg" width="100%" alt="hands holding three zucchini">
-	</a>
-	
-	
-  </div>
-  </div>
-  <script>
-    showSlides(slideIndex);
-  </script>
-
-  <footer>
-    <div class="footer-grid">
-
-      <!--SECTION 1-->
-      <div class="footer-grid-item item1">
-        <h4>About</h4>
-        <p>We are a non-profit agriculture program that works
-          to provide sustainable and localized food systems in the Greater Orlando area.
-          Let's grow together.</p>
-      </div>
-
-      <!--SECTION 2-->
-      <div class="footer-grid-item item2">
-        <h4>Menu</h4>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="getinvolved.html">Get Involved</a></li>
-          <li><a href="resources.html">Resources</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
-        </ul>
-      </div>
-
-      <!--SECTION 3-->
-      <div class="footer-grid-item item3">
-        <h4>Useful Links</h4>
-        <ul>
-          <li><a href="#">Privacy Policy</a></li>
-          <li><a href="#">Terms of Use</a></li>
-        </ul>
-      </div>
-
-      <!--SECTION 4-->
-      <div class="footer-grid-item item4">
-        <p>Copyright &copy Growlando Urban Farming 2021</p>
-
-        <div class=" footer-social">
+        <!--SECTION 2-->
+        <div class="footer-grid-item item2">
+          <h4>Menu</h4>
           <ul>
-            <li>
-              <a href="#"><i class="fa fa-facebook"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa fa-instagram"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa fa-youtube"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa fa-twitter"></i></a>
-            </li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="getinvolved.html">Get Involved</a></li>
+            <li><a href="resources.html">Resources</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
           </ul>
         </div>
-      </div>
-    </div>
-  </footer>
-</body>
 
+        <!--SECTION 3-->
+        <div class="footer-grid-item item3">
+          <h4>Useful Links</h4>
+          <ul>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms of Use</a></li>
+          </ul>
+        </div>
+
+        <!--SECTION 4-->
+        <div class="footer-grid-item item4">
+          <p>Copyright &copy Growlando Urban Farming 2021</p>
+
+          <div class="footer-social">
+            <ul>
+              <li>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-instagram"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-youtube"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
