--- a/getinvolved.html
+++ b/getinvolved.html
@@ -1,251 +1,269 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--Head section contains metadata (not displayed in page)-->
+  <!--Head section contains metadata (not displayed in page)-->
 
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!--Title displayed in browser tab-->
-  <title>Get Involved</title>
-  <!-- social icon stylesheet -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <!-- stylesheet -->
-  <link rel="stylesheet" href="style/main.css" />
-</head>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--Title displayed in browser tab-->
+    <title>Get Involved</title>
+    <!-- social icon stylesheet -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="style/main.css" />
+  </head>
 
-<nav class="fill">
-  <h1>URBAN FARMING</h1>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="getinvolved.html">Get Involved</a></li>
-    <li><a href="resources.html">Resources</a></li>
-    <li><a href="gallery.html">Gallery</a></li>
-  </ul>
-</nav>
+  <nav class="fill">
+    <h1>Growlando</h1>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="getinvolved.html">Get Involved</a></li>
+      <li><a href="resources.html">Resources</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+    </ul>
+  </nav>
 
-<body>
-  <div class="get-involved-info">
-    <h1 class="garden-heading2">How can I get involved?</h1>
-    <br />
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-      occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-      mollit anim id est laborum.
-    </p>
-  </div>
-  <h1 class="garden-heading">Orlando, FL Community Garden Locations</h1>
-  <section class="garden-section">
-    <div style="overflow-x: auto">
-      <table id="community-gardens">
-        <tr>
-          <th>Garden</th>
-          <th>Location</th>
-          <th>Plots</th>
-          <th>Contact</th>
-        </tr>
-        <tr>
-          <td>Colonialtown Community Garden</td>
-          <td>1517 Lake Highland Drive</td>
-          <td>13 garden plots</td>
-          <td>colonialtowncommunitygarden@gmail.com</td>
-        </tr>
-        <tr>
-          <td>Festival Park</td>
-          <td>2911 East Robinson Street</td>
-          <td>30 garden plots</td>
-          <td>festivalparkcommunitygarden@gmail.com</td>
-        </tr>
-        <tr>
-          <td>Englewood Park</td>
-          <td>6123 La Costa Drive</td>
-          <td>22 garden plots</td>
-          <td>
-            Robert Lorento at rglbob@bellsouth.net, or Tom Cooper at
-            mochacoop@bellsouth.net
-          </td>
-        </tr>
-        <tr>
-          <td>Lake Davis/Greenwood Cemetery</td>
-          <td>1226 Elmwood Street</td>
-          <td>16 garden plots</td>
-          <td>
-            Kathryn Hornblette, Garden Committee President, at
-            LDGCommunityGarden@gmail.com.
-          </td>
-        </tr>
-        <tr>
-          <td>Lake Druid Park</td>
-          <td>
-            899 Coy Drive (take Coy Drive north from Colonial, the road dead
-            ends into the Park)
-          </td>
-          <td>50 garden plots</td>
-          <td>lakedruidgarden@gmail.com</td>
-        </tr>
-        <tr>
-          <td>Laureate Park I – resident only</td>
-          <td>8495 Laureate Boulevard</td>
-          <td>15 garden plots</td>
-          <td>contact the Laureate Park Home Owner’s Association</td>
-        </tr>
-        <tr>
-          <td>Laureate Park II – resident onlys</td>
-          <td>9661 Tavistock Lakes Boulevard</td>
-          <td>29 garden plots</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>Northwest Community Center</td>
-          <td>3955 W D Judge Drive</td>
-          <td>17 garden plots</td>
-          <td>luciana.deshay@orlando.gov</td>
-        </tr>
-        <tr>
-          <td>Parramore</td>
-          <td>654 West Robinson Street</td>
-          <td>19 garden plots</td>
-          <td>Lynn Nicholson at 407.719.7906</td>
-        </tr>
-        <tr>
-          <td>Washington Shores</td>
-          <td>3600 Rogers Drive</td>
-          <td>20 garden plots</td>
-          <td>Samantha Wallace at sam_wallace@hotmail.com</td>
-        </tr>
-        <tr>
-          <td>Rock Lake Neighborhood Center</td>
-          <td>440 North Tampa Avenue</td>
-          <td>19 garden plots</td>
-          <td>Samantha Wallace at sam_wallace@hotmail.com.</td>
-        </tr>
-        <tr>
-          <td>Dover Shores</td>
-          <td>1400 Gaston Foster Road</td>
-          <td>14 garden plots</td>
-          <td>dovershorescommunitygarden@gmail.com</td>
-        </tr>
-        <tr>
-          <td>Englewood Neighborhood Center</td>
-          <td>6123 La Costa Drive</td>
-          <td>20 garden plots</td>
-          <td>alexandra.temes@orlando.gov</td>
-        </tr>
-        <tr>
-          <td>Lake Eola Heights</td>
-          <td>406 East Amelia Street</td>
-          <td>36 garden plots</td>
-          <td>lehgc@gmail.com</td>
-        </tr>
-        <tr>
-          <td>Citrus Square – resident only</td>
-          <td>5625 Hickey Drive</td>
-          <td>7 garden plots</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>Mai Kai Condominiums – resident only</td>
-          <td>1935 Conway Road</td>
-          <td>14 garden plots</td>
-          <td></td>
-        </tr>
-      </table>
+  <body>
+    <div class="get-involved-info">
+      <h1 class="garden-heading2">How can I get involved?</h1>
+      <br />
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </p>
     </div>
-  </section>
-  <h1 class="garden-heading2">Want to sponser a garden?</h1>
-  <section class="circle-section">
-    <div class="circle-container">
-      <ul class="circles inline">
-        <li class="circle-list">
-          <div class="circled">1</div>
-          <p>Use the contact us form below</p>
-        </li>
-        <li class="circle-list">
-          <div class="circled">2</div>
-          <p>Specify which garden location you want to sponser</p>
-        </li>
-        <li class="circle-list">
-          <div class="circled">3</div>
-          <p>Include donation amount or materials to sponser</p>
-        </li>
-      </ul>
-    </div>
-  </section>
-  <h1 class="garden-heading">Contact Us</h1>
-  <section class="garden-section">
-    <div class="contact-container">
-      <form action="/action_page.php">
-        <label for="fname">First & Last Name</label>
-        <input type="text" id="fname" name="firstname" placeholder="Your name" />
-
-        <label for="email">Email Address</label>
-        <input type="text" id="email" name="Email" placeholder="example@gmail.com" />
-
-        <label for="subject">Message</label>
-        <textarea id="message" name="message" placeholder="Write something.." style="height: 200px"></textarea>
-
-        <input type="submit" value="Submit" />
-      </form>
-    </div>
-  </section>
-  <footer>
-    <div class="footer-grid">
-
-      <!--SECTION 1-->
-      <div class="footer-grid-item item1">
-        <h4>About</h4>
-        <p>We are a non-profit agriculture program that works
-          to provide sustainable and localized food systems in the Greater Orlando area.
-          Let's grow together.</p>
+    <h1 class="garden-heading">Orlando, FL Community Garden Locations</h1>
+    <section class="garden-section">
+      <div style="overflow-x: auto">
+        <table id="community-gardens">
+          <tr>
+            <th>Garden</th>
+            <th>Location</th>
+            <th>Plots</th>
+            <th>Contact</th>
+          </tr>
+          <tr>
+            <td>Colonialtown Community Garden</td>
+            <td>1517 Lake Highland Drive</td>
+            <td>13 garden plots</td>
+            <td>colonialtowncommunitygarden@gmail.com</td>
+          </tr>
+          <tr>
+            <td>Festival Park</td>
+            <td>2911 East Robinson Street</td>
+            <td>30 garden plots</td>
+            <td>festivalparkcommunitygarden@gmail.com</td>
+          </tr>
+          <tr>
+            <td>Englewood Park</td>
+            <td>6123 La Costa Drive</td>
+            <td>22 garden plots</td>
+            <td>
+              Robert Lorento at rglbob@bellsouth.net, or Tom Cooper at
+              mochacoop@bellsouth.net
+            </td>
+          </tr>
+          <tr>
+            <td>Lake Davis/Greenwood Cemetery</td>
+            <td>1226 Elmwood Street</td>
+            <td>16 garden plots</td>
+            <td>
+              Kathryn Hornblette, Garden Committee President, at
+              LDGCommunityGarden@gmail.com.
+            </td>
+          </tr>
+          <tr>
+            <td>Lake Druid Park</td>
+            <td>
+              899 Coy Drive (take Coy Drive north from Colonial, the road dead
+              ends into the Park)
+            </td>
+            <td>50 garden plots</td>
+            <td>lakedruidgarden@gmail.com</td>
+          </tr>
+          <tr>
+            <td>Laureate Park I – resident only</td>
+            <td>8495 Laureate Boulevard</td>
+            <td>15 garden plots</td>
+            <td>contact the Laureate Park Home Owner’s Association</td>
+          </tr>
+          <tr>
+            <td>Laureate Park II – resident onlys</td>
+            <td>9661 Tavistock Lakes Boulevard</td>
+            <td>29 garden plots</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Northwest Community Center</td>
+            <td>3955 W D Judge Drive</td>
+            <td>17 garden plots</td>
+            <td>luciana.deshay@orlando.gov</td>
+          </tr>
+          <tr>
+            <td>Parramore</td>
+            <td>654 West Robinson Street</td>
+            <td>19 garden plots</td>
+            <td>Lynn Nicholson at 407.719.7906</td>
+          </tr>
+          <tr>
+            <td>Washington Shores</td>
+            <td>3600 Rogers Drive</td>
+            <td>20 garden plots</td>
+            <td>Samantha Wallace at sam_wallace@hotmail.com</td>
+          </tr>
+          <tr>
+            <td>Rock Lake Neighborhood Center</td>
+            <td>440 North Tampa Avenue</td>
+            <td>19 garden plots</td>
+            <td>Samantha Wallace at sam_wallace@hotmail.com.</td>
+          </tr>
+          <tr>
+            <td>Dover Shores</td>
+            <td>1400 Gaston Foster Road</td>
+            <td>14 garden plots</td>
+            <td>dovershorescommunitygarden@gmail.com</td>
+          </tr>
+          <tr>
+            <td>Englewood Neighborhood Center</td>
+            <td>6123 La Costa Drive</td>
+            <td>20 garden plots</td>
+            <td>alexandra.temes@orlando.gov</td>
+          </tr>
+          <tr>
+            <td>Lake Eola Heights</td>
+            <td>406 East Amelia Street</td>
+            <td>36 garden plots</td>
+            <td>lehgc@gmail.com</td>
+          </tr>
+          <tr>
+            <td>Citrus Square – resident only</td>
+            <td>5625 Hickey Drive</td>
+            <td>7 garden plots</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Mai Kai Condominiums – resident only</td>
+            <td>1935 Conway Road</td>
+            <td>14 garden plots</td>
+            <td></td>
+          </tr>
+        </table>
       </div>
-
-      <!--SECTION 2-->
-      <div class="footer-grid-item item2">
-        <h4>Menu</h4>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="getinvolved.html">Get Involved</a></li>
-          <li><a href="resources.html">Resources</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
+    </section>
+    <h1 class="garden-heading2">Want to sponser a garden?</h1>
+    <section class="circle-section">
+      <div class="circle-container">
+        <ul class="circles inline">
+          <li class="circle-list">
+            <div class="circled">1</div>
+            <p>Use the contact us form below</p>
+          </li>
+          <li class="circle-list">
+            <div class="circled">2</div>
+            <p>Specify which garden location you want to sponser</p>
+          </li>
+          <li class="circle-list">
+            <div class="circled">3</div>
+            <p>Include donation amount or materials to sponser</p>
+          </li>
         </ul>
       </div>
+    </section>
+    <h1 class="garden-heading">Contact Us</h1>
+    <section class="garden-section">
+      <div class="contact-container">
+        <form action="/action_page.php">
+          <label for="fname">First & Last Name</label>
+          <input
+            type="text"
+            id="fname"
+            name="firstname"
+            placeholder="Your name"
+          />
 
-      <!--SECTION 3-->
-      <div class="footer-grid-item item3">
-        <h4>Useful Links</h4>
-        <ul>
-          <li><a href="#">Privacy Policy</a></li>
-          <li><a href="#">Terms of Use</a></li>
-        </ul>
+          <label for="email">Email Address</label>
+          <input
+            type="text"
+            id="email"
+            name="Email"
+            placeholder="example@gmail.com"
+          />
+
+          <label for="subject">Message</label>
+          <textarea
+            id="message"
+            name="message"
+            placeholder="Write something.."
+            style="height: 200px"
+          ></textarea>
+
+          <input type="submit" value="Submit" />
+        </form>
       </div>
+    </section>
+    <footer>
+      <div class="footer-grid">
+        <!--SECTION 1-->
+        <div class="footer-grid-item item1">
+          <h4>About</h4>
+          <p>
+            We are a non-profit agriculture program that works to provide
+            sustainable and localized food systems in the Greater Orlando area.
+            Let's grow together.
+          </p>
+        </div>
 
-      <!--SECTION 4-->
-      <div class="footer-grid-item item4">
-        <p>Copyright &copy Growlando Urban Farming 2021</p>
-
-        <div class=" footer-social">
+        <!--SECTION 2-->
+        <div class="footer-grid-item item2">
+          <h4>Menu</h4>
           <ul>
-            <li>
-              <a href="#"><i class="fa fa-facebook"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa fa-instagram"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa fa-youtube"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa fa-twitter"></i></a>
-            </li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="getinvolved.html">Get Involved</a></li>
+            <li><a href="resources.html">Resources</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
           </ul>
         </div>
-      </div>
-    </div>
-  </footer>
-</body>
 
+        <!--SECTION 3-->
+        <div class="footer-grid-item item3">
+          <h4>Useful Links</h4>
+          <ul>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms of Use</a></li>
+          </ul>
+        </div>
+
+        <!--SECTION 4-->
+        <div class="footer-grid-item item4">
+          <p>Copyright &copy Growlando Urban Farming 2021</p>
+
+          <div class="footer-social">
+            <ul>
+              <li>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-instagram"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-youtube"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
